# loudness-vis

./: .gitignore  DEVLOG.zh-CN.md  README.md  README.zh-CN.md  THIRD_PARTY_NOTICES.md  index.html  lite.html  package-lock.json  package.json  release-notes.md  start-local.ps1  vite.config.ts
FoRk/: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  index.html  legacy.html  package-lock.json  package.json  release-notes.md  start-local.cmd  tsconfig.json
FoRk/UV/: README.md  start-demo.cmd
FoRk/Visualization algorithm/: README.md
FoRk/electron/: audio-session-helper.ps1  main.cjs  preload.cjs
FoRk/scripts/: build-uv.mjs  local-demo-server.mjs
FoRk/src/: App.module.css  App.tsx  global.d.ts  main.tsx
UV/: README.md  pyproject.toml  start-demo.ps1
UV/src/loudness_vis_uv/: server.py
UV/src/loudness_vis_uv/assets/: index.html  legacy.html
Visualization algorithm/: README.md  Visualization algorithm_CN.md
docs/: DEVLOG.zh-CN.md  release-notes.md
electron/: audio-session-helper.ps1  main.cjs  preload.cjs
lite/: README.md  index.html
scripts/: build-lite.mjs  build-uv.mjs  local-demo-server.mjs  sync-uv-assets.mjs
src/: App.module.css  App.tsx  global.d.ts  main.tsx
src/audio/: coloredPeaks.ts  dsp.ts  engine.ts  lufs.ts  recordEngine.ts  spectrogram.ts  stats.ts  trackEngine.ts  useEngineState.ts  useRecordState.ts  useTrackState.ts
src/components/: ColorPresetSwitch.module.css  ColorPresetSwitch.tsx  LanguageSwitch.tsx  PresetBar.module.css  PresetBar.tsx  SettingsPanel.module.css  SettingsPanel.tsx  UploadTargetModal.module.css  (+1 more)
(+134 files in other folders)
