[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loudness-vis-demo"
version = "0.2.0"
description = "Local UV launcher for the LoudnessVis web demos"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
loudness-vis-demo = "loudness_vis_uv.server:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
loudness_vis_uv = ["assets/**/*", "assets/**/.*"]
